# llm-data-vault

./: .gitignore  Cargo.toml  Dockerfile  README.md  anonymization_engine.rs  docker-compose.yml  package-lock.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml  deploy.yml  release.yml
config/: default.toml
crates/vault-access/: Cargo.toml
crates/vault-access/src/: abac.rs  audit.rs  authorizer.rs  error.rs  lib.rs  policy.rs  rbac.rs  token.rs
crates/vault-anonymize/: Cargo.toml
crates/vault-anonymize/src/: anonymizer.rs  config.rs  context.rs  detector.rs  error.rs  lib.rs  patterns.rs  strategy.rs
crates/vault-api/: Cargo.toml
crates/vault-api/src/: error.rs  handlers.rs  lib.rs  middleware.rs  pagination.rs  response.rs  routes.rs  state.rs  validation.rs
crates/vault-api/src/handlers/: auth.rs  datasets.rs  health.rs  records.rs  webhooks.rs
crates/vault-api/src/middleware/: auth.rs  cors.rs  logging.rs  metrics.rs  rate_limit.rs
crates/vault-cli/: Cargo.toml  README.md
crates/vault-cli/src/: main.rs
crates/vault-cli/src/commands/: api_keys.rs  auth.rs  completion.rs  config_cmd.rs  datasets.rs  devops.rs  mod.rs  pii.rs  records.rs  webhooks.rs
crates/vault-cli/src/config/: mod.rs
crates/vault-cli/src/output/: error.rs  format.rs  mod.rs  table.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: audit.rs  dataset.rs  error.rs  id.rs  lib.rs  metadata.rs  record.rs  schema.rs  tenant.rs  user.rs  version.rs
crates/vault-crypto/: Cargo.toml
crates/vault-crypto/src/: encryption.rs  envelope.rs  error.rs  hash.rs  key.rs  kms.rs  lib.rs
crates/vault-integration/: Cargo.toml
crates/vault-integration/src/: bus.rs  delivery.rs  error.rs  event.rs  handler.rs  lib.rs  subscription.rs  webhook.rs
crates/vault-integration/src/adapters/: config_manager.rs  memory_graph.rs  mod.rs  observatory.rs  schema_registry.rs
crates/vault-migrations/: Cargo.toml
crates/vault-migrations/migrations/: 20240101000000_initial_setup.sql  20240101000001_users_and_auth.sql  20240101000002_datasets_and_records.sql  20240101000003_pii_and_anonymization.sql  20240101000004_webhooks.sql  20240101000005_api_keys.sql  20240101000006_audit_log.sql  20240101000007_indexes.sql  20240101000008_seed_data.sql
crates/vault-migrations/src/: error.rs  lib.rs  migrator.rs
crates/vault-sdk/: Cargo.toml  README.md
crates/vault-sdk/src/: error.rs  lib.rs
crates/vault-sdk/src/auth/: mod.rs  provider.rs  token.rs
crates/vault-sdk/src/client/: builder.rs  config.rs  http.rs  mod.rs
crates/vault-sdk/src/client/services/: api_keys.rs  auth.rs  datasets.rs  health.rs  mod.rs  pii.rs  records.rs  webhooks.rs
crates/vault-sdk/src/models/: auth.rs  common.rs  datasets.rs  mod.rs  pii.rs  records.rs  webhooks.rs
crates/vault-security/: Cargo.toml
crates/vault-security/src/: audit.rs  config.rs  error.rs  headers.rs  input.rs  lib.rs  secrets.rs  session.rs  signing.rs  threat.rs
crates/vault-server/: Cargo.toml
crates/vault-server/src/: config.rs  main.rs  telemetry.rs
crates/vault-storage/: Cargo.toml
crates/vault-storage/src/: cache.rs  chunk.rs  content.rs  error.rs  lib.rs  metadata.rs
crates/vault-storage/src/backend/: filesystem.rs  memory.rs  mod.rs  s3.rs
crates/vault-version/: Cargo.toml
crates/vault-version/src/: branch.rs  commit.rs  diff.rs  error.rs  history.rs  lib.rs  lineage.rs  tree.rs
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml
deploy/prometheus/: prometheus.yml
docs/: MISSING_COMPONENTS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_ASSESSMENT.md  api_layer_design.rs  storage_layer_pseudocode.md
docs/api/: openapi.yaml
docs/architecture/: OVERVIEW.md
docs/deployment/: CONFIGURATION.md  KUBERNETES.md
docs/guides/: INTEGRATION.md
docs/operations/: RUNBOOK.md
docs/pseudocode/: error_handling_observability.md
docs/security/: HARDENING.md
plans/: CORE_DATA_MODELS.md  DEPENDENCIES_AND_INTEGRATION_POINTS.md  DESIGN_PRINCIPLES.md  LLM-Data-Vault-Specification.md  MASTER-SPARC-SPECIFICATION.md  SUCCESS_METRICS.md
plans/architecture/: 00-index.md  01-system-overview.md  02-component-architecture.md  03-data-architecture.md  04-security-architecture.md  05-infrastructure-architecture.md  06-integration-architecture.md  07-reliability-architecture.md
plans/completion/: 00-index.md  01-cargo-workspace.md  02-ci-cd-pipelines.md  03-docker-configs.md  04-kubernetes-manifests.md  05-terraform-modules.md  06-helm-chart.md  07-dev-environment.md  08-implementation-roadmap.md
plans/pseudocode/: 00-index.md  01-core-data-models.md  02-storage-layer.md  03-encryption-security.md  04-anonymization-engine.md  05-access-control.md  06-api-layer.md  07-versioning-lineage.md  08-integration-observability.md
plans/refinement/: 00-index.md  01-coding-standards.md  02-api-contracts.md  03-database-schema.md  04-error-handling.md  05-testing-strategy.md  06-configuration.md  07-security-compliance.md  08-performance-requirements.md
tests/: integration_tests.rs
tests/integration/: mod.rs
tests/integration/api/: datasets.rs  health.rs  mod.rs  records.rs
tests/integration/auth/: api_keys.rs  mod.rs  rbac.rs  token.rs
tests/integration/common/: fixtures.rs  helpers.rs  mocks.rs  mod.rs  server.rs
tests/integration/pii/: anonymization.rs  detection.rs  mod.rs
tests/integration/storage/: backends.rs  content_store.rs  mod.rs
tests/integration/webhooks/: delivery.rs  management.rs  mod.rs
