[workspace]
members = [
    "crates/vault-core",
    "crates/vault-crypto",
    "crates/vault-storage",
    "crates/vault-anonymize",
    "crates/vault-access",
    "crates/vault-version",
    "crates/vault-integration",
    "crates/vault-api",
    "crates/vault-server",
    "crates/vault-sdk",
    "crates/vault-cli",
    "crates/vault-migrations",
    "crates/vault-security",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["LLM Data Vault Team"]
license = "MIT"
repository = "https://github.com/llm-data-vault/llm-data-vault"
description = "Enterprise-grade secure storage and anonymization for LLM data"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace", "timeout", "request-id"] }
hyper = { version = "1.0", features = ["full"] }

# gRPC
tonic = { version = "0.11", features = ["tls", "gzip"] }
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
argon2 = "0.5"
x25519-dalek = "2.0"

# JWT and Auth
jsonwebtoken = "9.2"
base64 = "0.21"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Bytes and streaming
bytes = "1.5"
pin-project-lite = "0.2"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Cloud SDKs (feature-gated)
aws-sdk-s3 = "1.9"
aws-sdk-kms = "1.9"
aws-config = "1.1"

# Testing
mockall = "0.12"
fake = { version = "2.9", features = ["derive"] }
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
testcontainers = "0.15"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
url = "2.5"
http = "1.0"
urlencoding = "2.1"

# HTTP Client (for SDK)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "stream", "multipart"] }
backoff = { version = "0.4", features = ["tokio"] }
secrecy = { version = "0.8", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
lto = "thin"

# Root package for workspace-level integration tests
[package]
name = "llm-data-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Enterprise-grade secure storage and anonymization for LLM data"

[features]
default = []
integration = []

[dependencies]
vault-core = { path = "crates/vault-core" }
vault-crypto = { path = "crates/vault-crypto" }
vault-storage = { path = "crates/vault-storage" }
vault-anonymize = { path = "crates/vault-anonymize" }
vault-access = { path = "crates/vault-access" }
vault-version = { path = "crates/vault-version" }
vault-integration = { path = "crates/vault-integration" }
vault-api = { path = "crates/vault-api" }
vault-server = { path = "crates/vault-server" }
vault-sdk = { path = "crates/vault-sdk" }
vault-cli = { path = "crates/vault-cli" }
vault-migrations = { path = "crates/vault-migrations" }
vault-security = { path = "crates/vault-security" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
jsonwebtoken = { workspace = true }
blake3 = { workspace = true }
tempfile = "3.10"
hex = "0.4"
hmac = { workspace = true }
sha2 = { workspace = true }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["integration"]
