[package]
name = "vault-access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Access control (RBAC/ABAC) for LLM Data Vault"

[dependencies]
vault-core = { path = "../vault-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
