[package]
name = "vault-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "REST and gRPC API layer for LLM Data Vault"

[dependencies]
vault-core = { path = "../vault-core" }
vault-crypto = { path = "../vault-crypto" }
vault-storage = { path = "../vault-storage" }
vault-anonymize = { path = "../vault-anonymize" }
vault-access = { path = "../vault-access" }
vault-version = { path = "../vault-version" }
vault-integration = { path = "../vault-integration" }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Observability
tracing = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
blake3 = { workspace = true }
base64 = { workspace = true }

# Rate limiting
dashmap = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
url = "2.5"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }
