[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain types and interfaces for LLM Data Vault"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
proptest = { workspace = true }
