[package]
name = "vault-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Cryptographic services for LLM Data Vault"

[dependencies]
vault-core = { path = "../vault-core" }

aes-gcm = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
argon2 = { workspace = true }
x25519-dalek = { workspace = true }
base64 = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# AWS KMS (feature-gated)
aws-sdk-kms = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

[features]
default = []
aws-kms = ["aws-sdk-kms", "aws-config"]

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
