[package]
name = "vault-migrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Database migrations for LLM Data Vault"

[dependencies]
# Database
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

# Hashing
md5 = "0.7"
hex = "0.4"

# CLI (optional, for standalone migration tool)
clap = { version = "4.4", features = ["derive", "env"], optional = true }
dotenvy = { workspace = true, optional = true }

[features]
default = []
cli = ["clap", "dotenvy", "tracing-subscriber"]

[[bin]]
name = "vault-migrate"
path = "src/bin/migrate.rs"
required-features = ["cli"]

[lints]
workspace = true
