[package]
name = "vault-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Enterprise security hardening for LLM Data Vault"

[dependencies]
# Internal crates
vault-core = { path = "../vault-core" }
vault-crypto = { path = "../vault-crypto" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
hex = "0.4"

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Validation
validator = { workspace = true }
regex = { workspace = true }

# Data structures
dashmap = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
config = { workspace = true }

# Bytes
bytes = { workspace = true }

# URL parsing
url = { workspace = true }

# IP handling
ipnetwork = "0.20"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
